--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,13 @@ body,
 }
 
 .title {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-around;
+  align-items: flex-end;
 }
 
 h1 {
